--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
-  "name": "vifr",
-  "version": "0.0.1",
-  "description": "SSR base Vite for React",
-  "main": "index.js",
+  "name": "vifr-monorepo",
   "scripts": {
+    "preinstall": "npx only-allow pnpm",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "license": "MIT",
-  "homepage": "https://github.com/dixdiydiz/vifr",
   "packageManager": "pnpm@6.28.0",
   "engines": {
     "node": ">=16"
+  },
+  "devDependencies": {
+    "rollup": "^2.67.2",
+    "typescript": "^4.5.5"
   }
 }
