--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
   "name": "vifr-monorepo",
   "scripts": {
-    "preinstall": "npx only-allow pnpm",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "preinstall": "npx only-allow pnpm"
   },
-  "license": "MIT",
-  "packageManager": "pnpm@6.28.0",
+  "devDependencies": {
+    "@types/node": "^17.0.18",
+    "rimraf": "^3.0.2",
+    "rollup": "^2.67.2",
+    "typescript": "^4.5.5"
+  },
+  "packageManager": "pnpm@6.31.0",
   "engines": {
     "node": ">=16"
   },
-  "devDependencies": {
-    "rollup": "^2.67.2",
-    "typescript": "^4.5.5"
-  }
+  "license": "MIT"
 }
