--- a/package.json
+++ b/package.json
@@ -1,12 +1,17 @@
 {
   "name": "vifr-monorepo",
   "scripts": {
-    "preinstall": "npx only-allow pnpm"
+    "preinstall": "npx only-allow pnpm",
+    "dev": "rollup -c -w -m"
   },
   "devDependencies": {
+    "@rollup/plugin-node-resolve": "^13.1.3",
     "@types/node": "^17.0.18",
     "rimraf": "^3.0.2",
     "rollup": "^2.67.2",
+    "rollup-plugin-license": "^2.6.1",
+    "rollup-plugin-typescript2": "^0.31.2",
+    "tslib": "^2.3.1",
     "typescript": "^4.5.5"
   },
   "packageManager": "pnpm@6.31.0",
