--- a/packages/vifr-server/package.json
+++ b/packages/vifr-server/package.json
@@ -2,7 +2,10 @@
   "name": "@vifr/server",
   "version": "0.0.1",
   "description": "Vite-based React Framework",
-  "main": "index.js",
+  "bin": {
+    "vifr": "dist/cli.js"
+  },
+  "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
