--- a/packages/vifr-server/tsconfig.json
+++ b/packages/vifr-server/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "next",
+    "target": "esnext",
     "moduleResolution": "node",
     "strict": true,
     "declaration": true,
