--- a/package.json
+++ b/package.json
@@ -1,16 +1,21 @@
 {
+  "private": true,
   "name": "vifr-monorepo",
   "scripts": {
     "preinstall": "npx only-allow pnpm",
-    "dev": "rollup -c -w -m"
+    "dev": "rollup -c -w -m",
+    "build": "rollup -c"
   },
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^21.0.1",
     "@rollup/plugin-node-resolve": "^13.1.3",
+    "@types/bluebird": "^3.5.36",
     "@types/node": "^17.0.18",
     "rimraf": "^3.0.2",
     "rollup": "^2.67.2",
     "rollup-plugin-license": "^2.6.1",
     "rollup-plugin-typescript2": "^0.31.2",
+    "ts-toolbelt": "^9.6.0",
     "tslib": "^2.3.1",
     "typescript": "^4.5.5"
   },
