--- a/packages/vifr/package.json
+++ b/packages/vifr/package.json
@@ -1,18 +1,10 @@
 {
-  "name": "@vifr/server",
+  "name": "vifr",
   "version": "0.0.1",
   "description": "Vite-based React Framework",
-  "bin": {
-    "vifr": "dist/cli.js"
-  },
-  "main": "dist/index.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "dependencies": {
-    "cac": "^6.7.12",
-    "chalk": "^5.0.0",
-    "vite": "^2.8.1"
   },
   "packageManager": "pnpm@6.31.0",
   "engines": {
