--- a/packages/playground/feature/package.json
+++ b/packages/playground/feature/package.json
@@ -12,15 +12,14 @@
     "debug": "node --inspect-brk server"
   },
   "dependencies": {
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-router": "^5.2.1",
-    "react-router-dom": "^5.3.0"
+    "react": "^18.0.0-rc.0-next-fe905f152-20220107",
+    "react-dom": "^18.0.0-rc.0-next-fe905f152-20220107",
+    "react-router": "^6.2.1",
+    "react-router-dom": "^6.2.1"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "workspace:*",
+    "@vifr/server": "workspace:*",
     "compression": "^1.7.4",
-    "cross-env": "^7.0.3",
     "express": "^4.17.1",
     "serve-static": "^1.14.1"
   }
