--- a/packages/vifr-server/package.json
+++ b/packages/vifr-server/package.json
@@ -10,6 +10,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "@vitejs/plugin-react": "^1.2.0",
     "cac": "^6.7.12",
     "chalk": "^5.0.0",
     "vite": "^2.8.1"
@@ -21,6 +22,8 @@
   "license": "MIT",
   "devDependencies": {
     "@types/connect": "^3.4.35",
+    "@types/debug": "^4.1.7",
+    "debug": "^4.3.3",
     "picocolors": "^1.0.0"
   }
 }
