--- a/packages/playground/feature/package.json
+++ b/packages/playground/feature/package.json
@@ -18,7 +18,7 @@
     "react-router-dom": "^6.2.1"
   },
   "devDependencies": {
-    "@vifr/server": "workspace:*",
+    "vifr": "workspace:*",
     "compression": "^1.7.4",
     "express": "^4.17.1",
     "serve-static": "^1.14.1"
