--- a/packages/vifr/package.json
+++ b/packages/vifr/package.json
@@ -2,11 +2,26 @@
   "name": "vifr",
   "version": "0.0.1",
   "description": "Vite-based React Framework",
-  "main": "index.js",
+  "bin": {
+    "vifr": "dist/cli.js"
+  },
+  "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "packageManager": "pnpm@6.31.0",
+  "devDependencies": {
+    "@types/connect": "^3.4.35",
+    "@types/debug": "^4.1.7",
+    "debug": "^4.3.3",
+    "picocolors": "^1.0.0"
+  },
+  "dependencies": {
+    "@vitejs/plugin-react": "^1.2.0",
+    "cac": "^6.7.12",
+    "chalk": "^5.0.0",
+    "vite": "^2.8.1"
+  },
+  "packageManager": "pnpm@6.32.1",
   "engines": {
     "node": ">=16"
   },
