--- a/packages/playground/feature/package.json
+++ b/packages/playground/feature/package.json
@@ -12,8 +12,8 @@
     "debug": "node --inspect-brk server"
   },
   "dependencies": {
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.0.0-rc.1-next-f468816ef-20220225",
+    "react-dom": "^18.0.0-rc.1-next-f468816ef-20220225",
     "react-router": "^6.2.1",
     "react-router-dom": "^6.2.1"
   },
