--- a/package.json
+++ b/package.json
@@ -7,10 +7,15 @@
     "build": "rollup -c"
   },
   "devDependencies": {
+    "@babel/plugin-transform-runtime": "^7.17.0",
+    "@babel/preset-react": "^7.16.7",
+    "@rollup/plugin-babel": "^5.3.1",
     "@rollup/plugin-commonjs": "^21.0.1",
     "@rollup/plugin-node-resolve": "^13.1.3",
     "@types/bluebird": "^3.5.36",
     "@types/node": "^17.0.18",
+    "@types/react": "^17.0.39",
+    "@types/react-dom": "^17.0.13",
     "rimraf": "^3.0.2",
     "rollup": "^2.67.2",
     "rollup-plugin-license": "^2.6.1",
