--- a/packages/vifr/package.json
+++ b/packages/vifr/package.json
@@ -5,10 +5,15 @@
   "bin": {
     "vifr": "dist/cli.js"
   },
-  "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "main": "dist/index.js",
+  "exports": {
+    ".": "dist/index.js",
+    "./react": "dist/react/index.js"
+  },
+  "types": "dist/index.d.ts",
   "devDependencies": {
     "@types/debug": "^4.1.7",
     "debug": "^4.3.3",
