--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-dom": "^17.0.13",
     "rimraf": "^3.0.2",
     "rollup": "^2.67.2",
+    "rollup-plugin-copy": "^3.4.0",
     "rollup-plugin-license": "^2.6.1",
     "rollup-plugin-typescript2": "^0.31.2",
     "ts-toolbelt": "^9.6.0",
