--- a/packages/vifr/package.json
+++ b/packages/vifr/package.json
@@ -10,8 +10,8 @@
   },
   "main": "dist/index.js",
   "exports": {
-    ".": "dist/index.js",
-    "./react": "dist/react/index.js"
+    ".": "./dist/index.js",
+    "./react": "./dist/react/index.js"
   },
   "types": "dist/index.d.ts",
   "devDependencies": {
