--- a/packages/vifr/package.json
+++ b/packages/vifr/package.json
@@ -23,7 +23,7 @@
     "@vitejs/plugin-react": "^1.2.0",
     "cac": "^6.7.12",
     "chalk": "^5.0.0",
-    "magic-string": "^0.26.1",
+    "htmlparser2": "^7.2.0",
     "vite": "^2.8.4"
   },
   "peerDependencies": {
