--- a/packages/vifr/package.json
+++ b/packages/vifr/package.json
@@ -15,16 +15,19 @@
   },
   "types": "dist/index.d.ts",
   "devDependencies": {
+    "@types/babel__core": "^7.1.18",
     "@types/debug": "^4.1.7",
     "debug": "^4.3.3",
     "picocolors": "^1.0.0"
   },
   "dependencies": {
+    "@babel/core": "^7.17.5",
+    "@babel/plugin-transform-react-jsx": "^7.17.3",
     "@vitejs/plugin-react": "^1.2.0",
     "cac": "^6.7.12",
     "chalk": "^5.0.0",
     "htmlparser2": "^7.2.0",
-    "vite": "^2.8.4"
+    "vite": "^2.8.5"
   },
   "peerDependencies": {
     "react": ">=18",
