--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "name": "vifr-monorepo",
   "scripts": {
     "preinstall": "npx only-allow pnpm",
+    "format": "prettier --write .",
     "dev": "rollup -c -w -m",
     "build": "rollup -c"
   },
@@ -16,6 +17,10 @@
     "@types/node": "^17.0.18",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.13",
+    "eslint": "^8.11.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-define-config": "^1.2.5",
+    "prettier": "^2.5.1",
     "rimraf": "^3.0.2",
     "rollup": "^2.67.2",
     "rollup-plugin-copy": "^3.4.0",
