--- a/packages/vifr/package.json
+++ b/packages/vifr/package.json
@@ -18,7 +18,8 @@
     "@types/babel__core": "^7.1.18",
     "@types/debug": "^4.1.7",
     "debug": "^4.3.3",
-    "picocolors": "^1.0.0"
+    "picocolors": "^1.0.0",
+    "react-router-dom": "6"
   },
   "dependencies": {
     "@babel/core": "^7.17.5",
@@ -31,7 +32,8 @@
   },
   "peerDependencies": {
     "react": ">=18",
-    "react-dom": "^>=18"
+    "react-dom": "^>=18",
+    "react-router-dom": ">=6"
   },
   "packageManager": "pnpm@6.32.2",
   "engines": {
