--- a/packages/vifr/package.json
+++ b/packages/vifr/package.json
@@ -28,6 +28,7 @@
     "cac": "^6.7.12",
     "chalk": "^5.0.0",
     "htmlparser2": "^7.2.0",
+    "magic-string": "^0.26.1",
     "vite": "^2.8.5"
   },
   "peerDependencies": {
