--- a/package.json
+++ b/package.json
@@ -11,24 +11,25 @@
     "@babel/plugin-transform-runtime": "^7.17.0",
     "@babel/preset-react": "^7.16.7",
     "@rollup/plugin-babel": "^5.3.1",
-    "@rollup/plugin-commonjs": "^21.0.1",
+    "@rollup/plugin-commonjs": "^21.0.3",
     "@rollup/plugin-node-resolve": "^13.1.3",
     "@types/bluebird": "^3.5.36",
-    "@types/node": "^17.0.18",
-    "@types/react": "^17.0.39",
-    "@types/react-dom": "^17.0.13",
-    "eslint": "^8.11.0",
+    "@types/node": "^17.0.23",
+    "@types/react": "^17.0.43",
+    "@types/react-dom": "^17.0.14",
+    "eslint": "^8.12.0",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-define-config": "^1.2.5",
-    "prettier": "^2.5.1",
+    "eslint-define-config": "^1.3.0",
+    "prettier": "^2.6.1",
+    "react-router-dom": "^6.2.1",
     "rimraf": "^3.0.2",
-    "rollup": "^2.67.2",
+    "rollup": "^2.70.1",
     "rollup-plugin-copy": "^3.4.0",
     "rollup-plugin-license": "^2.6.1",
     "rollup-plugin-typescript2": "^0.31.2",
     "ts-toolbelt": "^9.6.0",
     "tslib": "^2.3.1",
-    "typescript": "^4.5.5"
+    "typescript": "^4.6.3"
   },
   "packageManager": "pnpm@6.32.2",
   "engines": {
