--- a/packages/playground/feature/package.json
+++ b/packages/playground/feature/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "test-feature",
+  "name": "feature",
   "private": true,
   "version": "0.0.0",
   "scripts": {
@@ -13,9 +13,7 @@
   },
   "dependencies": {
     "react": "^18.0.0-rc.1-next-f468816ef-20220225",
-    "react-dom": "^18.0.0-rc.1-next-f468816ef-20220225",
-    "react-router": "^6.2.1",
-    "react-router-dom": "^6.2.1"
+    "react-dom": "^18.0.0-rc.1-next-f468816ef-20220225"
   },
   "devDependencies": {
     "vifr": "workspace:*",
