--- a/packages/vifr/src/react/package.json
+++ b/packages/vifr/src/react/package.json
@@ -1,4 +1,10 @@
 {
   "type": "module",
-  "types": "dist/react/index.d.ts"
+  "types": "react/vifr-react.d.ts",
+  "peerDependencies": {
+    "react": ">=18",
+    "react-dom": ">=18",
+    "react-router": ">=6",
+    "react-router-dom": ">=6"
+  }
 }
