--- a/packages/playground/feature/package.json
+++ b/packages/playground/feature/package.json
@@ -12,8 +12,8 @@
     "debug": "node --inspect-brk server"
   },
   "dependencies": {
-    "react": "^18.0.0-rc.3-next-033fe52b4-20220325",
-    "react-dom": "^18.0.0-rc.3-next-033fe52b4-20220325"
+    "react": "^18.0.0-next-3e997fdba-20220329",
+    "react-dom": "^18.0.0-next-3e997fdba-20220329"
   },
   "devDependencies": {
     "vifr": "workspace:*",
