--- a/package.json
+++ b/package.json
@@ -3,13 +3,17 @@
   "name": "vifr-monorepo",
   "scripts": {
     "preinstall": "npx only-allow pnpm",
-    "format": "prettier --write .",
-    "dev": "rollup -c -w -m",
-    "build": "rollup -c"
+    "dev": "run-s dev-vifr dev-vifr-react",
+    "dev-vifr": "cd packages/vifr && npm run dev",
+    "dev-vifr-react": "cd packages/vifr-react && npm run dev",
+    "build": "run-s build-vifr build-vifr-react",
+    "build-vifr": "cd packages/vifr && npm run build",
+    "build-vifr-react": "cd packages/vifr-react && npm run build"
   },
   "devDependencies": {
     "@babel/plugin-transform-runtime": "^7.17.0",
     "@babel/preset-react": "^7.16.7",
+    "@microsoft/api-extractor": "^7.22.2",
     "@rollup/plugin-babel": "^5.3.1",
     "@rollup/plugin-commonjs": "^21.0.3",
     "@rollup/plugin-node-resolve": "^13.1.3",
@@ -17,11 +21,14 @@
     "@types/node": "^17.0.23",
     "@types/react": "^18.0.5",
     "@types/react-dom": "^18.0.1",
+    "@typescript-eslint/eslint-plugin": "^5.20.0",
+    "@typescript-eslint/parser": "^5.20.0",
     "eslint": "^8.12.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-define-config": "^1.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "npm-run-all": "^4.1.5",
     "prettier": "^2.6.1",
-    "react-router-dom": "^6.2.2",
     "rimraf": "^3.0.2",
     "rollup": "^2.70.1",
     "rollup-plugin-copy": "^3.4.0",
