--- a/packages/vifr-react/tsconfig.json
+++ b/packages/vifr-react/tsconfig.json
@@ -13,7 +13,9 @@
     "esModuleInterop": true,
     "useUnknownInCatchVariables": false,
     "declaration": true,
+    "declarationMap": true,
     "declarationDir": "dist",
-    "types": ["node"],
-  }
+    "jsx": "react-jsx",
+    "types": ["node"]
+  },
 }
