--- a/packages/vifr-react/package.json
+++ b/packages/vifr-react/package.json
@@ -2,7 +2,6 @@
   "name": "@vifr/react",
   "version": "0.0.1",
   "description": "vifr react components",
-  "main": "index.js",
   "scripts": {
     "dev": "rimraf dist && rollup -c -w",
     "build": "rimraf dist && run-s lint build-bundle build-temp-types roll-types",
@@ -15,7 +14,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "type": "module",
-  "types": "./dist/index.d.ts",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "exports": {
     ".": "./dist/index.js"
   },
