--- a/packages/playground/feature/package.json
+++ b/packages/playground/feature/package.json
@@ -13,12 +13,12 @@
   },
   "dependencies": {
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "vifr": "workspace:*"
   },
   "devDependencies": {
     "compression": "^1.7.4",
     "express": "^4.17.1",
-    "serve-static": "^1.14.1",
-    "vifr": "workspace:*"
+    "serve-static": "^1.14.1"
   }
 }
