--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "rollup-plugin-typescript2": "^0.31.2",
     "ts-toolbelt": "^9.6.0",
     "tslib": "^2.3.1",
-    "typescript": "^4.6.3"
+    "typescript": "^4.6.3",
+    "react-router-dom": "^6.3.0"
   },
   "packageManager": "pnpm@6.32.2",
   "engines": {
