--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
     "@rollup/plugin-node-resolve": "^13.1.3",
     "@types/bluebird": "^3.5.36",
     "@types/node": "^17.0.23",
-    "@types/react": "^18.0.5",
-    "@types/react-dom": "^18.0.1",
+    "@types/react": "^18.0.6",
+    "@types/react-dom": "^18.0.2",
+    "react-router-dom": "^6.3.0",
     "@typescript-eslint/eslint-plugin": "^5.20.0",
     "@typescript-eslint/parser": "^5.20.0",
     "eslint": "^8.12.0",
@@ -34,8 +35,7 @@
     "rollup-plugin-typescript2": "^0.31.2",
     "ts-toolbelt": "^9.6.0",
     "tslib": "^2.3.1",
-    "typescript": "^4.6.3",
-    "react-router-dom": "^6.3.0"
+    "typescript": "^4.6.3"
   },
   "packageManager": "pnpm@6.32.2",
   "engines": {
