--- a/package.json
+++ b/package.json
@@ -9,35 +9,36 @@
     "build-vifr": "cd packages/vifr && npm run build"
   },
   "devDependencies": {
-    "@babel/plugin-transform-runtime": "^7.17.0",
-    "@babel/preset-react": "^7.16.7",
-    "@microsoft/api-extractor": "^7.22.2",
+    "@babel/plugin-transform-runtime": "^7.17.12",
+    "@babel/preset-react": "^7.17.12",
+    "@microsoft/api-extractor": "^7.24.0",
     "@rollup/plugin-babel": "^5.3.1",
-    "@rollup/plugin-commonjs": "^21.0.3",
-    "@rollup/plugin-node-resolve": "^13.1.3",
+    "@rollup/plugin-commonjs": "^22.0.0",
+    "@rollup/plugin-node-resolve": "^13.3.0",
     "@types/bluebird": "^3.5.36",
-    "@types/node": "^17.0.23",
-    "@types/react": "^18.0.8",
-    "@types/react-dom": "^18.0.3",
-    "react-router-dom": "^6.3.0",
-    "@typescript-eslint/eslint-plugin": "^5.20.0",
-    "@typescript-eslint/parser": "^5.20.0",
-    "eslint": "^8.12.0",
+    "@types/node": "^17.0.34",
+    "@types/react": "^18.0.9",
+    "@types/react-dom": "^18.0.4",
+    "@typescript-eslint/eslint-plugin": "^5.25.0",
+    "@typescript-eslint/parser": "^5.25.0",
+    "eslint": "^8.15.0",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-define-config": "^1.3.0",
+    "eslint-define-config": "^1.4.1",
     "eslint-plugin-prettier": "^4.0.0",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.6.1",
+    "prettier": "^2.6.2",
+    "react-router-dom": "^6.3.0",
     "rimraf": "^3.0.2",
-    "rollup": "^2.70.1",
+    "rollup": "^2.73.0",
     "rollup-plugin-copy": "^3.4.0",
-    "rollup-plugin-license": "^2.6.1",
+    "rollup-plugin-license": "^2.7.0",
     "rollup-plugin-typescript2": "^0.31.2",
     "ts-toolbelt": "^9.6.0",
-    "tslib": "^2.3.1",
-    "typescript": "^4.6.3"
+    "tslib": "^2.4.0",
+    "typescript": "^4.6.4",
+    "vitest": "^0.12.6"
   },
-  "packageManager": "pnpm@6.32.2",
+  "packageManager": "pnpm@7.1.1",
   "engines": {
     "node": ">=16"
   },
