--- a/packages/vifr/package.json
+++ b/packages/vifr/package.json
@@ -54,19 +54,19 @@
   "dependencies": {
     "@babel/core": "^7.17.9",
     "@babel/plugin-transform-react-jsx": "^7.17.0",
-    "@vitejs/plugin-react": "^1.2.0",
+    "@vitejs/plugin-react": "^2.0.0-alpha.0",
     "cac": "^6.7.12",
     "chalk": "^5.0.0",
     "htmlparser2": "^7.2.0",
     "magic-string": "^0.26.1",
-    "vite": "^2.9.9"
+    "vite": "^3.0.0-alpha.1"
   },
   "peerDependencies": {
     "react": ">=18",
     "react-dom": ">=18",
     "react-router-dom": ">=6.3.0"
   },
-  "packageManager": "pnpm@6.32.2",
+  "packageManager": "pnpm@7.1.1",
   "engines": {
     "node": ">=16"
   },
