--- a/package.json
+++ b/package.json
@@ -6,26 +6,38 @@
     "dev": "run-s dev-vifr",
     "dev-vifr": "cd packages/vifr && npm run dev",
     "build": "run-s build-vifr",
-    "build-vifr": "cd packages/vifr && npm run build"
+    "build-vifr": "cd packages/vifr && npm run build",
+    "test:src": "jest -c jest.config.ts",
+    "test:e2e": "jest -c jest.config.e2e.ts",
+    "test:coverage": "jest -c jest.config.e2e.ts && nyc report --reporter=html"
   },
   "devDependencies": {
     "@babel/plugin-transform-runtime": "^7.17.12",
     "@babel/preset-react": "^7.17.12",
+    "@jest/types": "^28.1.0",
     "@microsoft/api-extractor": "^7.24.0",
     "@rollup/plugin-babel": "^5.3.1",
     "@rollup/plugin-commonjs": "^22.0.0",
     "@rollup/plugin-node-resolve": "^13.3.0",
     "@types/bluebird": "^3.5.36",
+    "@types/jest": "^27.5.1",
     "@types/node": "^17.0.34",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.4",
     "@typescript-eslint/eslint-plugin": "^5.25.0",
     "@typescript-eslint/parser": "^5.25.0",
+    "babel-plugin-istanbul": "^6.1.1",
     "eslint": "^8.15.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-define-config": "^1.4.1",
+    "eslint-plugin-playwright": "^0.9.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "expect-playwright": "^0.8.0",
+    "jest": "^28.1.0",
+    "jest-playwright-preset": "^1.7.0",
     "npm-run-all": "^4.1.5",
+    "nyc": "^15.1.0",
+    "playwright": "^1.22.1",
     "prettier": "^2.6.2",
     "react-router-dom": "^6.3.0",
     "rimraf": "^3.0.2",
@@ -33,10 +45,11 @@
     "rollup-plugin-copy": "^3.4.0",
     "rollup-plugin-license": "^2.7.0",
     "rollup-plugin-typescript2": "^0.31.2",
+    "ts-jest": "^28.0.2",
+    "ts-node": "^10.7.0",
     "ts-toolbelt": "^9.6.0",
     "tslib": "^2.4.0",
-    "typescript": "^4.6.4",
-    "vitest": "^0.12.6"
+    "typescript": "^4.6.4"
   },
   "packageManager": "pnpm@7.1.1",
   "engines": {
