--- a/packages/playground/joker/package.json
+++ b/packages/playground/joker/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "feature",
+  "name": "joker",
   "private": true,
-  "version": "0.0.0",
   "scripts": {
     "dev": "node server",
     "build": "npm run build:client && npm run build:server",
