--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "run-s build-vifr",
     "build-vifr": "cd packages/vifr && npm run build",
     "test:src": "jest -c jest.config.ts",
-    "test:e2e": "jest -c jest.config.e2e.ts",
+    "test:e2e": "BUILD_TEST=0 jest -c jest.config.e2e.ts",
     "test:coverage": "jest -c jest.config.e2e.ts && nyc report --reporter=html"
   },
   "devDependencies": {
@@ -35,6 +35,7 @@
     "expect-playwright": "^0.8.0",
     "jest": "^28.1.0",
     "jest-playwright-preset": "^1.7.0",
+    "jest-process-manager": "^0.3.1",
     "npm-run-all": "^4.1.5",
     "nyc": "^15.1.0",
     "playwright": "^1.22.1",
