--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "run-s build-vifr",
     "build-vifr": "cd packages/vifr && npm run build",
     "test:src": "jest -c jest.config.ts",
-    "test:e2e": "BUILD_TEST=1 jest -c jest.config.e2e.ts",
+    "test:e2e": "TEST_BUILD_MODE=0 playwright test",
     "test:coverage": "jest -c jest.config.e2e.ts && nyc report --reporter=html"
   },
   "devDependencies": {
@@ -16,6 +16,7 @@
     "@babel/preset-react": "^7.17.12",
     "@jest/types": "^28.1.0",
     "@microsoft/api-extractor": "^7.24.0",
+    "@playwright/test": "^1.22.2",
     "@rollup/plugin-babel": "^5.3.1",
     "@rollup/plugin-commonjs": "^22.0.0",
     "@rollup/plugin-node-resolve": "^13.3.0",
@@ -32,9 +33,7 @@
     "eslint-define-config": "^1.4.1",
     "eslint-plugin-playwright": "^0.9.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "expect-playwright": "^0.8.0",
-    "jest": "^27.5.1",
-    "jest-playwright-preset": "^1.7.2",
+    "jest": "^28.1.0",
     "jest-process-manager": "^0.3.1",
     "npm-run-all": "^4.1.5",
     "nyc": "^15.1.0",
