--- a/packages/vifr/tsconfig.json
+++ b/packages/vifr/tsconfig.json
@@ -15,6 +15,6 @@
     "declaration": true,
     "declarationDir": "dist",
     "jsx": "react-jsx",
-    "types": ["node"],
+    "types": ["node", "jest"],
   }
 }
