--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eslint-plugin-playwright": "^0.9.0",
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "^28.1.0",
+    "kill-port": "^2.0.0",
     "npm-run-all": "^4.1.5",
     "nyc": "^15.1.0",
     "playwright": "^1.22.2",
